add coonection string

--- a/Desk_Master_API/appsettings.json
+++ b/Desk_Master_API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultSqlConnection": "Server= LAPTOP-IFUND6R7\\SQLEXPRESS;Database=DeskMasterDB;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
