--- a/DESK_MASTER/angular.json
+++ b/DESK_MASTER/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": ["lodash", "moment"],
             "outputPath": "dist/DESK_MASTER",
             "index": "src/index.html",
             "main": "src/main.ts",
