--- a/DESK_MASTER/package.json
+++ b/DESK_MASTER/package.json
@@ -17,8 +17,8 @@
     "@angular/compiler": "^17.2.3",
     "@angular/core": "^17.2.3",
     "@angular/forms": "^17.2.3",
-    "@angular/material": "^16.2.13",
-    "@angular/material-moment-adapter": "^16.2.14",
+    "@angular/material": "^17.2.1",
+    "@angular/material-moment-adapter": "^17.2.1",
     "@angular/platform-browser": "^17.2.3",
     "@angular/platform-browser-dynamic": "^17.2.3",
     "@angular/router": "^17.2.3",
@@ -27,6 +27,7 @@
     "@ngrx/store": "^16.0.1",
     "@ngrx/store-devtools": "^16.0.1",
     "bootstrap": "^5.3.2",
+    "moment": "^2.18.1",
     "ngx-mat-timepicker": "^16.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
